Alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -588,7 +588,7 @@ form {
   width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   padding: 250px 0;
 }
